[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tldrs-vhs"
version = "0.1.0"
description = "Local content-addressed store for tool outputs (tldrs-vhs)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Steve Yegge", email = "stevey@gmail.com" }
]
keywords = ["cas", "content-addressed", "llm", "tools", "tldr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
tldrs-vhs = "tldrs_vhs.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/mistakeknot/tldrs-vhs"
Repository = "https://github.com/mistakeknot/tldrs-vhs"

[tool.hatch.build.targets.wheel]
packages = ["src/tldrs_vhs"]
